cc: Always report locked_size in software image cache.

This patch ensures that we always report the locked_size, and we
report 0 if the decode is unlocked.

R=ericrk@chromium.org
BUG=693968
CQ_INCLUDE_TRYBOTS=master.tryserver.blink:linux_trusty_blink_rel

Review-Url: https://codereview.chromium.org/2713483002
Cr-Commit-Position: refs/heads/master@{#452262}

Former-commit-id: 7d1142a765ae5648b212d357e4db425e2fad3623